k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knorten
  namespace: knada-system
spec:
  type: ClusterIP
  ports:
  - name: knorten
    port: 80
    targetPort: 8080
  selector:
    app: knorten
