k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knorten
  namespace: knada-system
  annotations:
    kubernetes.io/ingress.class: gce-internal
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: knorten.knada.io
    http:
      paths:
      - backend:
          service:
            name: knorten
            port:
              name: knorten
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - knorten.knada.io
    secretName: knorten-certificate
